--- a/apps/todoop_ui/assets/package.json
+++ b/apps/todoop_ui/assets/package.json
@@ -15,6 +15,7 @@
     "clean-css-brunch": "2.10.0",
     "elm": "^0.18.0",
     "elm-brunch": "^0.11.1",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.10.0"
   }
 }
